@@ -121,7 +121,7 @@ class PaymentRequest implements BuilderInterface
 
         if ($currencyCode === "UGX") {
             $amount = $amount / 100;
-        } elseif ($currencyCode === "OMR") {
+        } elseif (in_array($currencyCode, ['KWD', 'BHD', 'OMR'])) {
             $amount = $amount * 10;
         }
 
@@ -146,7 +146,7 @@ class PaymentRequest implements BuilderInterface
                 ],
                 'merchantDefinedData' => [
                     'pluginName' => 'magento-2',
-                    'pluginVersion' => '1.1.1'
+                    'pluginVersion' => '1.1.2'
                 ]
             ],
             'method' => \Laminas\Http\Request::METHOD_POST,
