@@ -111,7 +111,7 @@ class RefundRequest implements BuilderInterface
 
         if ($currencyCode === "UGX") {
             $amount = $amount / 100;
-        } elseif ($currencyCode === "OMR") {
+        } elseif (in_array($currencyCode, ['KWD', 'BHD', 'OMR'])) {
             $amount = $amount * 10;
         }
 
@@ -130,7 +130,7 @@ class RefundRequest implements BuilderInterface
                         ],
                         'merchantDefinedData' => [
                             'pluginName' => 'magento-2',
-                            'pluginVersion' => '1.1.1'
+                            'pluginVersion' => '1.1.2'
                         ]
                     ],
                     'method' => $method,
