@@ -2,7 +2,7 @@
   "name": "networkinternational/ngenius",
   "description": "Network International N-Genius Payment Gateway for Magento 2",
   "type": "magento2-module",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "minimum-stability": "stable",
   "license": "GPL-3.0",
   "authors": [{
